fix spacing for header section

--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -78,3 +78,8 @@ body {
     font-size: 12px;
     color: #F9FAF8;
 }
+
+.right > .image {
+    margin-bottom: -18px;
+    margin-left: -75px;
+}
